Just a port to 1.21
Nothing interesting. Please ignore